2003-07-10  James Tanis  <jtt@wonder.sysdetect.com>

	* include/libbk_inline.h (bk_dll_delete): Revamp delete.

2003-07-09  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ringbuf.c: Use liberal sprinkling of volatile to try and
	reduce potential compiler optimization reordering.

2003-07-09  James Tanis  <jtt@hawking.sysdetect.com>

	* include/libbk_inline.h (bk_dll_insert_internal): General insert
	routine which handles all insert cases.
	(bk_dll_insert_unique): "Front end" for unique inserts.
	(bk_dll_error_reason): Error reason.

2003-07-07  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* xml/b_search.c (bkxml_attrnode_data): Added string expansion option.

2003-07-02  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_strconv.c (bk_string_atoflag): don't segfault for NULL names

2003-07-01  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_string.c (bk_string_quote): Operation precedence snafu

2003-07-01  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_run.c (bk_run_fd_cancel): Signal select when state of
	descriptors has changed.

2003-06-30  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ringbuf.c: Ring buffer--fast data communication structure.

2003-06-30  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_exec.c (bk_pipe_to_exec): using BK_GWD for /dev/null path is
	far more likely to be used by hacker to redirect to /etc/passwd than
	to ever be needed by a sysadmin who is not totally psychotic

2003-06-27  Seth Robertson  <seth@startide.sysdetect.com>

	* src/bk_daemon.c: Add old daemonizing program to starting libbk
	install.  It is not bakaized per se, but it certainly works!

2003-06-25  James Tanis  <jtt@austin.sysdetect.com>

	* include/libbk_inline.h: Reorder inline functions so they inline.

	* lib/b_ioh.c: Convert bid queue from a nomal dll to bk_dll.
	Convert biq_iterate/nextobj to biq_minimum/successor. See comments
	in libbk_inline.h for explanation as to why this won't potentially
	slow things down.